# work_ua_scrapper

./: .gitignore  pyproject.toml
srcapper/: base_methods.py  relevant_keywords_module.py
srcapper/robota_ua/: requests.py  robota_ua_webscrapper.py
srcapper/work_ua/: work_ua_interactors.py  work_ua_webscrapper.py
tg_bot/: main.py  menus.py  states.py  utils.py
